updated sheldon quotes file

--- a/SheldonQuote_quotes.yaml
+++ b/SheldonQuote_quotes.yaml
@@ -1,4 +1,315 @@
 ---
+- ! '"You know I''m in such a good mood I''m actually finding your tenuous grasp of
+  the English language folksy and charming today."'
+- ! '"Tweet that tweetie bird."'
+- ! '"Oh, Ubuntu. You''re my favorite Linux-based operating system."'
+- ! '"You know, in difficult times like this, I often turn to a force stronger than
+  myself. Amy: Religion? Sheldon: Star Trek."'
+- ! 'Sheldon: How was your date? Leonard: Awesome! Sheldon: Score one for liquor and
+  poor judgment'
+- Boldly go, Howard Wolowitz.
+- Engineering, where the semi-skilled laborers execute the vision of those who think
+  and dream
+- ! '"Good night. And if there''s an apocalypse, good luck."'
+- ! '"If I could I would, but I can''t so I shan''t"'
+- And now that I have some wood. I'm going to begin the erection of my settlement.
+- ! '"Come back here, you stupid bird, so I can love you."#SheldonCooper'
+- Thanks to you, I know better than to ask if you are menstruating. And, based on
+  your behavior, I don't have to.
+- ! 'RT @BigBangQs: Drinking Game! http://t.co/6f33Mx1I'
+- ! '"Why hast thou forsaken me, O deity whose existence I doubt?"'
+- The tinier the train the more concentrated the fun.
+- ! '"Interesting. Sex works even better than chocolate to modify behavior. I wonder
+  if anyone else has stumbled onto that."'
+- ! '"Oh yes, canine football fans are a common sight in Texas. Cats, however, refuse
+  to wear sporting apparel."'
+- ! '"And now that I have some wood. I''m going to begin the erection of my settlement."
+  #BBT'
+- If we're changing topics, I believe I have dibs with the capybara, a rodent the
+  size of a baby hippo
+- ! '"Why did the chicken cross the Mobius Strip? To get to the same side! Bazinga!"'
+- While you're at it I am upset we have an unannounced houseguest, so make me cocoa.
+- ! '"Don''t worry. Wonder Woman was an Amazon. And Amazons tend to be very beefy
+  gals."'
+- ! '"I must say, Amy, pretending to have intercourse with you has given me a great
+  deal of satisfaction."'
+- ! 'Sheldon: ... I can personally guarantee it has spent less than 20 minutes on
+  an astronaut''s penis.'
+- ! '"Wil Wheaton ... the Jar Jar Binks of the Star Trek Universe."'
+- ! 'RT @TheTvScoop: ''Big Bang Theory'' star creates TV show about real prodigies
+  http://t.co/7nMx5CoE via @CNET'
+- I`m immune to your Sarcasm... http://t.co/4Cau6jWf
+- ! '"To amend the words of Toy Story, you have not got a friend in me."'
+- ! '"That''s going to make me a chick magnet and I''m so busy as it is!"#BigBangTheory'
+- ! '"And here is my Justice League membership card, but that doesn''t prove I know
+  Batman."'
+- ! '"It''s not cartoons, it''s anime!"'
+- ! '"I platonically love you, man, but you''re a mess."#bbt'
+- ! '"It''s not cartoons, it''s anime!"'
+- ! '"I''m trying to raise the temperature in here before my nipples tear through
+  my shirt."'
+- ! '"Milk Duds, with their self-deprecating name and remarkably mild flavor, are
+  the most apologetic of the boxed candies."'
+- ! '"So, what do you guys do for fun around here? Sheldon: Well, today we tried masturbating
+  for money." #BBT'
+- Bazinga! glowing sheldon shirt! http://t.co/kMGo173o
+- ! '"I''m sorry, coffee''s out of the question. When I moved to California I promised
+  my mother that I wouldn''t start doing drugs."'
+- How wonderful, dinner with some assembly required.
+- Sheldons Green Lantern Shirt! http://t.co/AFn5oCal So Cool!
+- ! 'Sheldon: Do you know where the phrase jibber jabber comes from? Penny: Oh my
+  god, you''re about to jibber jabber about "jibber jabber?"'
+- Leonard, I platonically love you man, but face it, you're a mess.
+- ! 'Penny: I give up, he''s impossible Sheldon: I can''t be impossible, I exist.
+  I believe what you meant to say is, "I give up, he''s improbable"'
+- Didn't work. This alcohol is defective
+- Please tell me you are not having coitus
+- ! '"There''s a fine line between wrong and visionary. Unfortunately, you have to
+  be a visionary to see it."'
+- Seasons 1-5 all on Blu-Ray Nice! http://t.co/YxRIcxpL
+- ! '"When I try to decieve, I myself have more ticks then a lyme-disease research
+  facility."'
+- Just keep in mind should you ever need a slightly apathetic, tertiary friend, I
+  stand at the ready.
+- Call me a romantic. I like to think your Mark Ruffalo is still out there somewhere.
+- ! 'RT @BigBangQs: The four of you are three of my closest friends, and one treasured
+  acquaintance -Sheldon'
+- You may have gone to Cambridge, but I'm an honorary graduate of Starfleet Academy.
+- I love strawberry Quik. It's my favorite pink fluid narrowly beating out Pepto-Bismol.
+- ! '"Leonard, let me tell you something. Personal robots cannot get here soon enough."'
+- ! 'Sheldon: How could you not find him? Leonard: Because he''s hard to find. If
+  he was easy to find, the books would be called "There''s Waldo."'
+- ! '"A neutron walks into a bar and asks how much for a drink. The bartender replies
+  "for you, no charge"." #Sheldon'
+- ! '"What exactly does that expression mean, ''friends with benefits?'' Does he provide
+  her with health insurance?" #BBT'
+- Season Six Here! http://t.co/lSriZzh6
+- ! '"You can lead a chicken to crisco, but you can''t make your mother fry it." #BBT'
+- My new computer came with Windows 7. Windows 7 is much more user-friendly than Windows
+  Vista. I don't like that
+- ! '"I would have been here sooner but the bus kept stopping for other people to
+  get on it." #SheldonCooper'
+- ! '"Cause of Injury: Lack of Adhesive Ducks."'
+- ! '"You''re my girlfriend and you''re not going to cater to my every need? Where''d
+  the magic go?"'
+- ! 'Amy: The meme has reached full penetration. Sheldon: Pun intended? Amy: No. Happy
+  accident.'
+- ! 'Amy: I''m Raggedy Ann and he''s Raggedy C-3PO. Sheldon: It was a compromise.
+  I lost.'
+- ! 'Sheldon: This cushion experienced a nude revenge wiggle. Cleaner: A what? Sheldon:
+  A naked man sat on it.'
+- ! '"A little misunderstanding? Galileo and the Pope had a little misunderstanding..."'
+- Knock Knock Penny Shirt! http://t.co/qgrIufr9
+- Two tea bags in one cup? You're not at a rave.
+- ! '"Incidentally, one can get beaten up in school simply by referring to oneself
+  as one. "'
+- ! '"I''m not insane, my mother had me tested!" #SheldonCooper'
+- 50% of marriages end in divorce, but 100% of make-your-own-sundae bars end in happiness
+- ! '"Score 1 for liquor and poor judgement."'
+- ! '"I''m clearly too evolved for driving."'
+- ! '"It''s not cartoons, it''s anime!"'
+- ! '"Why did the chicken cross the Mobius Strip? To get to the same side! Bazinga!"'
+- ! '"What an elf I would''ve made."'
+- ! '"Tweet that tweetie bird."'
+- ! '"Incidentally, one can get beaten up in school simply by referring to oneself
+  as one. "'
+- ! '"Good night. And if there''s an apocalypse, good luck."'
+- ! '"New topic: women. Delightfully mysterious or bat-crap crazy?"'
+- ! '"I never joke about safety."'
+- BBT Complete 5th Season Here! http://t.co/1frZyoZ2
+- ! '"I''m trying to raise the temperature in here before my nipples tear through
+  my shirt."'
+- ! '"And here is my Justice League membership card, but that doesn''t prove I know
+  Batman."'
+- ! '"Don''t worry. Wonder Woman was an Amazon. And Amazons tend to be very beefy
+  gals."'
+- ! '"Bazinga punk! Now we''re even!" #SheldonCooper'
+- ! '"Come back here, you stupid bird, so I can love you."#SheldonCooper'
+- ! '"That''s going to make me a chick magnet and I''m so busy as it is!"#BigBangTheory'
+- ! '"I platonically love you, man, but you''re a mess."#bbt'
+- ! '"Hello, I know you''re out there. I can hear you metabolizing oxygen and expelling
+  carbon dioxide." #SheldonCooper'
+- ! '"I''m sorry, coffee''s out of the question. When I moved to California I promised
+  my mother that I wouldn''t start doing drugs."'
+- Bazinga! The T-Shirt! http://t.co/ffrQKSFN
+- ! '"A fear of heights is illogical. A fear of falling, on the other hand, is prudent
+  and evolutionary." #BigBangTheory'
+- ! '"And to think, I was about to waste the last of my good haemorrhoid cream on
+  you!"'
+- ! '"What type of Computer do you have? And please don''t say a white one." #SheldonCooper'
+- ! 'Penny: "Hey, nice knees! Sheldon: Thank you! They''re my mother''s!"'
+- ! '"I do not have to urinate. I am the master of my own bladder.........drat."'
+- ! '(To Priya) "You may have gone to Cambridge but I''m an honorary graduate of Starfleet
+  Academy!" #BBT'
+- BBT Complete Second Season Here! http://t.co/bxQqUPle
+- ! '"There''s a fine line between wrong and visionary. Unfortunately, you have to
+  be a visionary to see it."'
+- ! '"When I try to decieve, I myself have more ticks then a lyme-disease research
+  facility."'
+- ! '"So, what do you guys do for fun around here? Sheldon: Well, today we tried masturbating
+  for money." #BBT'
+- ! '"If you don''t mind, I''d like to stop listening to you and start talking."'
+- ! '"My new computer came with Windows 7. Windows 7 is much more user-friendly than
+  Windows Vista......I don''t like that."'
+- ! '"You can''t make a half sandwich. If it''s not half of a whole sandwich, it''s
+  just a small sandwich."'
+- ! '"No butts, no cuts, no coconuts." #SheldonCooper'
+- Seasons 1-5 all on Blu-Ray WOW! http://t.co/YxRIcxpL
+- ! '"If ifs and buts were candies and nuts, we would all have a merry Christmas."#BigBangTheory'
+- ! '"I am the ball, my thoughts are its thoughts, its holes are my holes."'
+- ! '"A neutron walks into a bar and asks how much for a drink. The bartender replies
+  "for you, no charge"." #SheldonCooper'
+- ! '"Interesting. Sex works even better than chocolate to modify behavior. I wonder
+  if anyone else has stumbled onto that."'
+- ! '"You can lead a chicken to crisco, but you can''t make your mother fry it." #BBT'
+- ! '"Howard, you know me to be a very smart man. Don''t you think that if I were
+  wrong, I''d know it?"'
+- ! '"There there, everything is going to be fine... Sheldon''s here!" #BBT'
+- BBT Complete 1st Season Here! http://t.co/zrfZP6Jc
+- ! '"No one calls me Moon Pie but Meemaw."'
+- ! '"I must say, Amy, pretending to have intercourse with you has given me a great
+  deal of satisfaction."'
+- ! '"All I need is a healthy ovum and I can grow my own Leonard Nimoy!"'
+- ! '"Cause of Injury: Lack of Adhesive Ducks."'
+- ! '"What exactly does that expression mean, ''friends with benefits?'' Does he provide
+  her with health insurance?" #BBT'
+- BBT Complete 5th Season Here! http://t.co/1frZyoZ2
+- ! '"A little misunderstanding? Galileo and the Pope had a little misunderstanding..."'
+- ! '"For the record, I do have genitals. They''re functional and aesthetically pleasing."
+  #SheldonCooper #BBT'
+- ! '"You know, in difficult times like this, I often turn to a force stronger than
+  myself. Amy: Religion? Sheldon: Star Trek."'
+- ! 'Zack:"You''re inferring I''m stupid." Sheldon: "That''s not correct. We implied
+  you''re stupid, you then inferred it."'
+- ! '"Ah, gravity - thou art a heartless bitch."'
+- ! '"I''m not insane, my mother had me tested!" #SheldonCooper'
+- Robot Evolution Shirt! http://t.co/IUkOthvq
+- ! '"what kind of world do we live in if one man would take another man''s battle
+  ostrich."'
+- ! '"ah, memory impairment. The free prize that comes at the bottom of every vodka
+  bottle" #SheldonCooper'
+- ! '"There''s a lot of harm in trying something new. That''s why we test out drugs
+  and cosmetics on bunny rabbits."'
+- BBT Complete 5th Season Here! http://t.co/1frZyoZ2
+- ! '"How would one measure a sense of humor? A humormometer?" #BigBangTheory'
+- ! '"That''s preposterous. I do not resemble C-3PO. Don''t get me wrong, I''m flattered.
+  I just don''t see it."'
+- ! '"You''re wrong again. If arrogance were my super power, my name would be Dr.
+  Arroganto." #BBT'
+- ! '"Let it never be said that Sheldon Lee Cooper ignored the pleas of a damsel in
+  distress!"'
+- ! '"You''re my girlfriend and you''re not going to cater to my every need? Where''d
+  the magic go?"'
+- ! '"Leonard, let me tell you something. Personal robots cannot get here soon enough."'
+- ! '"Score 1 for liquor and poor judgement."'
+- Soft Kitty The Shirt! http://t.co/HWupOvB4
+- ! '"Biologists are mean."  #SheldonCooper'
+- ! '"I love my mind."'
+- ! '"Oh, and one more thing, it''s on bitch."'
+- ! '"We could also stop using the letter M. But I think that idea is isguided and
+  oronic." #BBT'
+- ! '"I would have been here sooner but the bus kept stopping for other people to
+  get on it." #SheldonCooper'
+- ! '"I have a Masters degree and two Doctorates. The things I *should* know, I do
+  know." #BigBangTheory'
+- Seasons 1-5 all on Blu-Ray WOW! http://t.co/YxRIcxpL
+- ! '"It''s hard to say no to Yoohoo - it literally beckons." #BBT'
+- ! '"Penny, I''m a physicist. I have a working knowledge of the entire universe and
+  everything it contains." #SheldonCooper'
+- ! '"50% of marriages end in divorce, but 100% of sundae bars end in happiness."
+  #BigBangTheory'
+- ! '"And now that I have some wood. I''m going to begin the erection of my settlement."
+  #BBT'
+- ! '"Everything is better with Bluetooth."'
+- ! '"To amend the words of Toy Story, you have not got a friend in me."'
+- ! '"You know I''m in such a good mood I''m actually finding your tenuous grasp of
+  the English language folksy and charming today."'
+- ! '"And what a civilisation is the Greeks. They gave us science, democracy and little
+  cubes of charred meat that taste like sweat."'
+- Get BBT Season Six Here! http://t.co/lSriZzh6
+- ! '"Wil Wheaton ... the Jar Jar Binks of the Star Trek Universe."'
+- ! '"Oh yes, canine football fans are a common sight in Texas. Cats, however, refuse
+  to wear sporting apparel."'
+- ! '"It''s a shame our society mocks the differently uvulated."'
+- ! '"Milk Duds, with their self-deprecating name and remarkably mild flavor, are
+  the most apologetic of the boxed candies."'
+- ! '"Oh, Ubuntu. You''re my favorite Linux-based operating system."'
+- ! '"The dice giveth and the dice taketh away."'
+- ! '"If I could I would, but I can''t so I shan''t"'
+- Soft Kitty The Shirt! http://t.co/HWupOvB4
+- ! '"I''m clearly too evolved for driving."'
+- ! '"It''s not cartoons, it''s anime!"'
+- ! '"Engineering. Where the noble semiskilled laborers execute the vision of those
+  who think and dream. Hello, Oompa-Loompas of science."'
+- ! '"Why hast thou forsaken me, O deity whose existence I doubt?"'
+- ! '"If it''s good enough for Kirk, Crunch, and Kangaroo it''s good enough for me."'
+- ! '"I was expecting applause but I suppose stunned silence is equally appropriate."'
+- BBT Complete 1st Season Here! http://t.co/zrfZP6Jc
+- ! '"I''m clearly too evolved for driving."'
+- ! '"It''s not cartoons, it''s anime!"'
+- ! '"Why did the chicken cross the Mobius Strip? To get to the same side! Bazinga!"'
+- ! '"What an elf I would''ve made."'
+- ! '"Tweet that tweetie bird."'
+- ! '"Incidentally, one can get beaten up in school simply by referring to oneself
+  as one. "'
+- ! '"Good night. And if there''s an apocalypse, good luck."'
+- ! '"New topic: women. Delightfully mysterious or bat-crap crazy?"'
+- ! '"I never joke about safety."'
+- BBT Complete 5th Season Here! http://t.co/1frZyoZ2
+- ! '"I''m trying to raise the temperature in here before my nipples tear through
+  my shirt."'
+- ! '"And here is my Justice League membership card, but that doesn''t prove I know
+  Batman."'
+- ! '"Don''t worry. Wonder Woman was an Amazon. And Amazons tend to be very beefy
+  gals."'
+- ! '"Bazinga punk! Now we''re even!" #SheldonCooper'
+- ! '"Come back here, you stupid bird, so I can love you."#SheldonCooper'
+- ! '"That''s going to make me a chick magnet and I''m so busy as it is!"#BigBangTheory'
+- ! '"I platonically love you, man, but you''re a mess."#bbt'
+- ! '"Hello, I know you''re out there. I can hear you metabolizing oxygen and expelling
+  carbon dioxide." #SheldonCooper'
+- ! '"I''m sorry, coffee''s out of the question. When I moved to California I promised
+  my mother that I wouldn''t start doing drugs."'
+- Bazinga! The T-Shirt! http://t.co/ffrQKSFN
+- ! '"A fear of heights is illogical. A fear of falling, on the other hand, is prudent
+  and evolutionary." #BigBangTheory'
+- ! '"And to think, I was about to waste the last of my good haemorrhoid cream on
+  you!"'
+- ! '"What type of Computer do you have? And please don''t say a white one." #SheldonCooper'
+- ! 'Penny: "Hey, nice knees! Sheldon: Thank you! They''re my mother''s!"'
+- ! '"I do not have to urinate. I am the master of my own bladder.........drat."'
+- ! '(To Priya) "You may have gone to Cambridge but I''m an honorary graduate of Starfleet
+  Academy!" #BBT'
+- BBT Complete Second Season Here! http://t.co/bxQqUPle
+- ! '"There''s a fine line between wrong and visionary. Unfortunately, you have to
+  be a visionary to see it."'
+- ! '"When I try to decieve, I myself have more ticks then a lyme-disease research
+  facility."'
+- ! '"So, what do you guys do for fun around here? Sheldon: Well, today we tried masturbating
+  for money." #BBT'
+- ! '"If you don''t mind, I''d like to stop listening to you and start talking."'
+- ! '"My new computer came with Windows 7. Windows 7 is much more user-friendly than
+  Windows Vista......I don''t like that."'
+- ! '"You can''t make a half sandwich. If it''s not half of a whole sandwich, it''s
+  just a small sandwich."'
+- ! '"No butts, no cuts, no coconuts." #SheldonCooper'
+- Seasons 1-5 all on Blu-Ray WOW! http://t.co/YxRIcxpL
+- ! '"If ifs and buts were candies and nuts, we would all have a merry Christmas."#BigBangTheory'
+- ! '"I am the ball, my thoughts are its thoughts, its holes are my holes."'
+- ! '"A neutron walks into a bar and asks how much for a drink. The bartender replies
+  "for you, no charge"." #SheldonCooper'
+- ! '"Interesting. Sex works even better than chocolate to modify behavior. I wonder
+  if anyone else has stumbled onto that."'
+- ! '"You can lead a chicken to crisco, but you can''t make your mother fry it." #BBT'
+- ! '"Howard, you know me to be a very smart man. Don''t you think that if I were
+  wrong, I''d know it?"'
+- ! '"There there, everything is going to be fine... Sheldon''s here!" #BBT'
+- BBT Complete 1st Season Here! http://t.co/zrfZP6Jc
+- ! '"No one calls me Moon Pie but Meemaw."'
+- ! '"I must say, Amy, pretending to have intercourse with you has given me a great
+  deal of satisfaction."'
+- ! '"All I need is a healthy ovum and I can grow my own Leonard Nimoy!"'
+- ! '"Cause of Injury: Lack of Adhesive Ducks."'
 - ! '"What exactly does that expression mean, ''friends with benefits?'' Does he provide
   her with health insurance?" #BBT'
 - BBT Complete 5th Season Here! http://t.co/1frZyoZ2
@@ -113,7 +424,6 @@
 - ! '"So, what do you guys do for fun around here? Sheldon: Well, today we tried masturbating
   for money." #BBT'
 - ! '"If you don''t mind, I''d like to stop listening to you and start talking."'
-- I Found this poster on sale for $8.99! Check it out here! http://t.co/IlX0OMfq http://t.co/lIEBXj6g
 - ! '"My new computer came with Windows 7. Windows 7 is much more user-friendly than
   Windows Vista......I don''t like that."'
 - ! '"You can''t make a half sandwich. If it''s not half of a whole sandwich, it''s
